--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "framer-motion": "^11.0.23",
+    "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
     "use-local-storage": "^3.0.0"
